# JNI_Demo

./: README.md
JNI_Demo/: settings.gradle
JNI_Demo/app/: build.gradle  proguard-rules.pro
JNI_Demo/app/src/androidTest/java/com/jnitest/luyanhao/jni_study/: ExampleInstrumentedTest.java
JNI_Demo/app/src/main/: AndroidManifest.xml
JNI_Demo/app/src/main/cpp/: native-lib.cpp
JNI_Demo/app/src/main/java/com/jnitest/luyanhao/jni_study/: MainActivity.java
JNI_Demo/app/src/main/res/layout/: activity_main.xml
JNI_Demo/app/src/main/res/values/: strings.xml
JNI_Demo/app/src/test/java/com/jnitest/luyanhao/jni_study/: ExampleUnitTest.java
JNI_Demo/normal_ndk_build/: build.gradle
JNI_Demo/normal_ndk_build/src/androidTest/java/com/jnitest/luyanhao/normal_ndk_build/: ExampleInstrumentedTest.java
JNI_Demo/normal_ndk_build/src/main/: AndroidManifest.xml
JNI_Demo/normal_ndk_build/src/main/java/com/jnitest/luyanhao/normal_ndk_build/: GrayImageActivity.java  JNIDynamicUtils.java  JniTest.java  MainActivity.java
JNI_Demo/normal_ndk_build/src/main/jni/: Android.mk  JNIDynamicUtils.cpp  JniTest.cpp  JniTest.h
JNI_Demo/normal_ndk_build/src/main/res/layout/: activity_gray_image.xml  activity_main.xml
JNI_Demo/normal_ndk_build/src/main/res/values/: strings.xml
JNI_Demo/normal_ndk_build/src/test/java/com/jnitest/luyanhao/normal_ndk_build/: ExampleUnitTest.java
JNI_Demo/rsademo/: CMakeLists.txt  build.gradle
JNI_Demo/rsademo/src/main/cpp/: My3DES.h  native-lib.cpp
JNI_Demo/rsademo/src/main/java/demo/rsa/gkbn/rsademo/: JniDemo.java  MainActivity.java
